@@ -1,3 +1,8 @@
+Mon Dec 10 17:18:34 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Add (experimental)
+	  _reorder_by_similarity() method to SearchResults.
+
 Thu Dec 06 16:53:23 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Add a "userdata" parameter to the
